feat(ambiance): implement automatic day-phase detection and banner image switch