@@ -3,19 +3,106 @@ package com.serinity.exercicecontrol.controller;
 import com.serinity.exercicecontrol.dao.RecommendationDAO;
 import com.serinity.exercicecontrol.dao.ScoringDAO;
 import com.serinity.exercicecontrol.model.Exercise;
-import com.serinity.exercicecontrol.service.ExerciseService;
-import com.serinity.exercicecontrol.service.RecommendationService;
-import com.serinity.exercicecontrol.service.ScoringService;
+import com.serinity.exercicecontrol.service.*;
+import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
+import javafx.geometry.Rectangle2D;
 import javafx.scene.Parent;
 import javafx.scene.control.*;
+import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
 import javafx.scene.layout.FlowPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.StackPane;
+
 import javafx.scene.layout.StackPane;
 
 import java.io.IOException;
 import java.sql.SQLException;
+import java.time.LocalTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -25,6 +112,11 @@ public class ExerciseListController {
     @FXML private ComboBox<String> cbType;
     @FXML private ComboBox<Integer> cbLevel;
     @FXML private FlowPane cardsPane;
+
+    // ✅ Ambiance Banner
+    @FXML private StackPane ambianceBox;
+    @FXML private ImageView imgAmbiance;
+    @FXML private Label lblAmbianceText;
 
     // ✅ Scoring UI
     @FXML private Label lblScore;
@@ -40,26 +132,22 @@ public class ExerciseListController {
     @FXML private Button btnStartRecommended;
 
     private final ExerciseService exerciseService = new ExerciseService();
-
-    // ✅ Services
     private final ScoringService scoringService = new ScoringService(new ScoringDAO());
     private final RecommendationService recommendationService = new RecommendationService(new RecommendationDAO());
 
-    // cache local
     private List<Exercise> allExercises = new ArrayList<>();
-
-    // état recommendation
     private Exercise recommendedExercise = null;
     private int lastScore100 = 0;
 
     @FXML
     public void initialize() {
-        // Init combos
+
+        // combos
         cbType.setItems(FXCollections.observableArrayList("Tous"));
         cbType.getSelectionModel().selectFirst();
 
         cbLevel.setItems(FXCollections.observableArrayList());
-        cbLevel.getItems().add(null); // null = Tous
+        cbLevel.getItems().add(null);
         cbLevel.getItems().addAll(1, 2, 3, 4, 5);
         cbLevel.setConverter(new javafx.util.StringConverter<>() {
             @Override public String toString(Integer v) { return v == null ? "Tous" : String.valueOf(v); }
@@ -67,16 +155,24 @@ public class ExerciseListController {
         });
         cbLevel.getSelectionModel().selectFirst();
 
+        // ✅ préparer "cover" quand la box resize
+        if (ambianceBox != null) {
+            ambianceBox.widthProperty().addListener((o, a, b) -> updateCoverViewport());
+            ambianceBox.heightProperty().addListener((o, a, b) -> updateCoverViewport());
+        }
+
         refresh();
         loadScoreAndRecommendation();
+        loadAmbianceBanner();
     }
 
-    // ===================== Actions FXML =====================
+    // ===================== Actions =====================
 
     @FXML
     private void onRefresh() {
         refresh();
         loadScoreAndRecommendation();
+        loadAmbianceBanner();
     }
 
     @FXML
@@ -101,6 +197,7 @@ public class ExerciseListController {
             ctrl.setModeCreateReturnToList(() -> {
                 refresh();
                 loadScoreAndRecommendation();
+                loadAmbianceBanner();
             });
 
             setContent(root);
@@ -116,11 +213,10 @@ public class ExerciseListController {
         openDetails(recommendedExercise);
     }
 
-    // ===================== Public API (ExerciseCardController) =====================
+    // ===================== API utilisée par ExerciseCardController =====================
 
     public void openEdit(Exercise ex) {
         if (ex == null) return;
-
         try {
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/exercice/ExerciseForm.fxml"));
             Parent root = loader.load();
@@ -129,6 +225,7 @@ public class ExerciseListController {
             ctrl.setModeEditReturnToList(ex, () -> {
                 refresh();
                 loadScoreAndRecommendation();
+                loadAmbianceBanner();
             });
 
             setContent(root);
@@ -138,9 +235,29 @@ public class ExerciseListController {
         }
     }
 
-    public void openDetails(Exercise ex) {
+    public void deleteExercise(Exercise ex) {
         if (ex == null) return;
 
+        Alert confirm = new Alert(Alert.AlertType.CONFIRMATION);
+        confirm.setTitle("Confirmation");
+        confirm.setHeaderText(null);
+        confirm.setContentText("Supprimer l'exercice : " + safe(ex.getTitle(), "(Sans titre)") + " ?");
+
+        if (confirm.showAndWait().orElse(ButtonType.CANCEL) != ButtonType.OK) return;
+
+        try {
+            exerciseService.deleteExercise(ex.getId());
+            refresh();
+            loadScoreAndRecommendation();
+            loadAmbianceBanner();
+        } catch (SQLException e) {
+            e.printStackTrace();
+            showError("Erreur", "Impossible de supprimer.\n" + e.getMessage());
+        }
+    }
+
+    public void openDetails(Exercise ex) {
+        if (ex == null) return;
         try {
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/exercice/ExerciseDetails.fxml"));
             Parent root = loader.load();
@@ -152,30 +269,6 @@ public class ExerciseListController {
         } catch (IOException e) {
             e.printStackTrace();
             showError("Erreur", "Impossible d'ouvrir les détails.");
-        }
-    }
-
-    public void deleteExercise(Exercise ex) {
-        if (ex == null) return;
-
-        Alert confirm = new Alert(Alert.AlertType.CONFIRMATION);
-        confirm.setTitle("Confirmation");
-        confirm.setHeaderText(null);
-        confirm.setContentText("Supprimer l'exercice : " + ex.getTitle() + " ?");
-
-        if (confirm.showAndWait().orElse(ButtonType.CANCEL) != ButtonType.OK) return;
-
-        try {
-            exerciseService.deleteExercise(ex.getId());
-            refresh();
-            loadScoreAndRecommendation();
-        } catch (SQLException e) {
-            e.printStackTrace();
-            Alert a = new Alert(Alert.AlertType.ERROR);
-            a.setTitle("Erreur");
-            a.setHeaderText(null);
-            a.setContentText("Impossible de supprimer.\n" + e.getMessage());
-            a.showAndWait();
         }
     }
 
@@ -196,11 +289,8 @@ public class ExerciseListController {
             cbType.getItems().setAll("Tous");
             cbType.getItems().addAll(types);
 
-            if (selectedType != null && cbType.getItems().contains(selectedType)) {
-                cbType.setValue(selectedType);
-            } else {
-                cbType.getSelectionModel().selectFirst();
-            }
+            if (selectedType != null && cbType.getItems().contains(selectedType)) cbType.setValue(selectedType);
+            else cbType.getSelectionModel().selectFirst();
 
             applyFiltersAndRender();
 
@@ -221,7 +311,7 @@ public class ExerciseListController {
                     boolean okLevel = (level == null) || ex.getLevel() == level;
                     return okType && okLevel;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         lblCount.setText("(" + filtered.size() + ")");
         renderCards(filtered);
@@ -248,43 +338,117 @@ public class ExerciseListController {
         }
     }
 
-    // ===================== Score + Recommendation UI =====================
+    // ===================== Ambiance Banner (LOCAL IMAGES) =====================
 
-    private void loadScoreAndRecommendation() {
-        int userId = 1; // TODO: user connecté
+    private void loadAmbianceBanner() {
+        if (imgAmbiance == null || lblAmbianceText == null) return;
 
-        // -------- SCORE --------
-        if (lblScore != null && lblScorePill != null) {
-            try {
-                ScoringService.ScoreResult score = scoringService.computeEngagementScore(userId);
-                lastScore100 = score.score100();
+        int h = LocalTime.now().getHour();
 
-                lblScore.setText(score.score100() + "/100 (" + score.levelText() + ")");
-                lblStreak.setText(score.streakDays() + " j");
-                lblCompletion.setText(score.completionRatePercent() + "%");
-                lblActive7d.setText(score.activeTime7dText());
+        String imagePath;
+        String text;
 
-                lblScorePill.getStyleClass().removeAll("pill-success", "pill-warn", "pill-info");
-                if (!lblScorePill.getStyleClass().contains("pill")) lblScorePill.getStyleClass().add("pill");
-
-                if (score.score100() >= 70) {
-                    lblScorePill.setText("EXCELLENT");
-                    lblScorePill.getStyleClass().add("pill-success");
-                } else if (score.score100() >= 40) {
-                    lblScorePill.setText("BON");
-                    lblScorePill.getStyleClass().add("pill-info");
-                } else {
-                    lblScorePill.setText("À RENFORCER");
-                    lblScorePill.getStyleClass().add("pill-warn");
-                }
-            } catch (Exception e) {
-                lastScore100 = 0;
-            }
+        if (h >= 6 && h < 12) {
+            imagePath = "/images/morning.jpg";
+            text = "🌄 Matin – Moment parfait pour démarrer en douceur.";
+        } else if (h >= 12 && h < 18) {
+            imagePath = "/images/afternoon.jpg";
+            text = "🌿 Après-midi – Rechargez votre énergie.";
+        } else if (h >= 18 && h < 22) {
+            imagePath = "/images/evening.jpg";
+            text = "🌇 Soir – Relaxation et recentrage.";
+        } else {
+            imagePath = "/images/night.jpg";
+            text = "🌙 Nuit – Détente profonde.";
         }
 
-        // -------- RECOMMENDATION --------
-        if (lblRecTitle == null || lblRecMeta == null || lblRecReason == null || btnStartRecommended == null) return;
+        lblAmbianceText.setText(text);
 
+        try {
+            Image img = new Image(Objects.requireNonNull(getClass().getResource(imagePath)).toExternalForm());
+            imgAmbiance.setImage(img);
+
+            // bind taille + faire "cover"
+            imgAmbiance.fitWidthProperty().bind(ambianceBox.widthProperty());
+            imgAmbiance.fitHeightProperty().bind(ambianceBox.heightProperty());
+
+            Platform.runLater(this::updateCoverViewport);
+
+        } catch (Exception e) {
+            imgAmbiance.setImage(null);
+            lblAmbianceText.setText(text + " (image manquante)");
+        }
+    }
+
+    /**
+     * Fait un rendu type "background-size: cover" :
+     * l'image remplit toute la box (crop au besoin) sans déformation.
+     */
+    private void updateCoverViewport() {
+        if (imgAmbiance == null || ambianceBox == null) return;
+        Image img = imgAmbiance.getImage();
+        if (img == null) return;
+
+        double boxW = ambianceBox.getWidth();
+        double boxH = ambianceBox.getHeight();
+        if (boxW <= 0 || boxH <= 0) return;
+
+        double imgW = img.getWidth();
+        double imgH = img.getHeight();
+        if (imgW <= 0 || imgH <= 0) return;
+
+        double boxRatio = boxW / boxH;
+        double imgRatio = imgW / imgH;
+
+        double viewW, viewH;
+
+        if (imgRatio > boxRatio) {
+            // image plus large -> crop côtés
+            viewH = imgH;
+            viewW = imgH * boxRatio;
+        } else {
+            // image plus haute -> crop haut/bas
+            viewW = imgW;
+            viewH = imgW / boxRatio;
+        }
+
+        double x = (imgW - viewW) / 2.0;
+        double y = (imgH - viewH) / 2.0;
+
+        imgAmbiance.setViewport(new Rectangle2D(x, y, viewW, viewH));
+    }
+
+    // ===================== Score + Recommendation =====================
+
+    private void loadScoreAndRecommendation() {
+        int userId = 1; // TODO user connecté
+
+        // SCORE
+        try {
+            ScoringService.ScoreResult score = scoringService.computeEngagementScore(userId);
+            lastScore100 = score.score100();
+
+            lblScore.setText(score.score100() + "/100 (" + score.levelText() + ")");
+            lblStreak.setText(score.streakDays() + " j");
+            lblCompletion.setText(score.completionRatePercent() + "%");
+            lblActive7d.setText(score.activeTime7dText());
+
+            lblScorePill.getStyleClass().removeAll("pill-success", "pill-warn", "pill-info");
+            if (!lblScorePill.getStyleClass().contains("pill")) lblScorePill.getStyleClass().add("pill");
+
+            if (score.score100() >= 70) {
+                lblScorePill.setText("EXCELLENT");
+                lblScorePill.getStyleClass().add("pill-success");
+            } else if (score.score100() >= 40) {
+                lblScorePill.setText("BON");
+                lblScorePill.getStyleClass().add("pill-info");
+            } else {
+                lblScorePill.setText("À RENFORCER");
+                lblScorePill.getStyleClass().add("pill-warn");
+            }
+        } catch (Exception ignored) {}
+
+        // RECOMMENDATION
         try {
             RecommendationService.RecommendationResult rec =
                     recommendationService.recommend(userId, lastScore100, allExercises);
@@ -299,11 +463,9 @@ public class ExerciseListController {
             }
 
             recommendedExercise = rec.exercise();
-
             lblRecTitle.setText(safe(recommendedExercise.getTitle(), "Exercice recommandé"));
             lblRecMeta.setText("Durée : " + recommendedExercise.getDurationMinutes() + " min • Niveau : " + recommendedExercise.getLevel());
             lblRecReason.setText(safe(rec.reason(), "Recommandation basée sur votre activité récente."));
-
             btnStartRecommended.setDisable(false);
 
         } catch (Exception e) {
@@ -315,18 +477,16 @@ public class ExerciseListController {
         }
     }
 
-    private String safe(String s, String def) {
-        return (s == null || s.isBlank()) ? def : s;
-    }
-
     // ===================== Template Host =====================
 
     private void setContent(Parent page) {
         StackPane host = (StackPane) cardsPane.getScene().lookup("#contentHost");
-        if (host == null) {
-            throw new IllegalStateException("contentHost introuvable. Vérifie fx:id=\"contentHost\" dans Template.fxml");
-        }
+        if (host == null) throw new IllegalStateException("contentHost introuvable dans Template.fxml");
         host.getChildren().setAll(page);
+    }
+
+    private String safe(String s, String def) {
+        return (s == null || s.isBlank()) ? def : s;
     }
 
     private void showError(String title, String msg) {
